--- a/react-hook-form/react-hook-form-tutorial-starter/package.json
+++ b/react-hook-form/react-hook-form-tutorial-starter/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.41.0"
+    "react-hook-form": "^7.41.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
